# pipeline

./: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  .gitattributes  .gitignore  Analog_GayosoPumpStation_TEST.csv  Control-Room.ipynb  Dockerfile  Dockerfile.dev  Dockerfile.multi-dev  Gayoso_Analog.csv  INSTALLATION.md  LICENSE  MANIFEST.in  New Text Document.txt  QUICKSTART.md  README.md  README_defunct.md  ROLLOUT.md  build.py  build_docker.sh  build_exe.py  build_executable.py  build_executable_v0.3.71.py  build_executible.py  build_multi.py  build_pex.py  build_pex.sh  build_pex_poetry.sh  build_release.py  build_release.py.save  build_release.py.save.1  build_shiv.ps1  build_shiv.py  build_shiv.sh  build_shiv_ubuntu.sh  build_shiv_versioned.sh  (+45 more)
.github/: pause  test-build.yml
.github/pause/: release.yml
.github/workflows/: ci.yml  docker.yml  publish.yaml  release.yml
.ipynb_checkpoints/: Control-Room-checkpoint.ipynb  output-checkpoint.json
config/: layout.dpgini  logging.json
docs/: CHANGELOG.md  CHANGLOG.md  M100FI.postman_environment.json  cat_eof.md  curl-to-MockData-Eds-Trend.md  data_request_yesterday_0600_24hour_.txt  eds_url_ports.md  email-transcript-02April2025.txt  entites.json  iphone-support.md  node-red-exec-node-config.md  philosophy.md  pipeline-howto.md  project.json  rollout_0.3.60.md  sites.json  termux_zshrc_nov2025  urls.json  webapi_rest_get_tabular_trend.py  webapi_rest_get_tabular_trend_custom.py
env/: README.md  directories.py  env.json  env_.py
exports/: Gayoso_Analog_20251031.csv  Gayoso_Analog_20251105.csv  Gayoso_Analog_20251106.csv
libs/Api/: ReadMe.txt  (+4 more)
pipeline_tests/: variable_clarity.py  variable_clarity_grok.py
powershell-scripts/: edsauth2.ps1  token_request.ps1
projects/: default-project.toml  default_project.toml
scripts/: generate_developer_requirements_txt.py  generate_schema.py  graphic_export.py  install-termux-shortcut.sh  launch_webplot.ps1  main_eds_to_rjn_quiet.ps1  main_tunnel_quiet.ps1  manual_postman_loader.py  prep_local_termux.sh  setup_termux.py  setup_termux.sh  setup_venv.ps1  termux_build.sh
src/: PyEds2_doc.py  __main__.py  address.py  calls.py  daemon.py  daemon_defunct.py  directories.py  directories_pavlov.py  eds_point.py  eds_rest_api_post.bat  eds_rest_api_post.py  env.py  helpers.py  hypomain.py  ingestion_migrated.py  livedatastore_migrated.py  ping.py  projectmanager.py  pyeds2_example2_progresswithsarah.py.txt  queriesmanager.py  queriesmanager_defunct.py  services.py  status_daemon.txt  tui.py
src/example/tauri_multimodal_app/src-tauri/: Cargo.toml  tauri.conf.json
src/example/tauri_multimodal_app/src-tauri/icons/: icon.icns
src/example/tauri_multimodal_app/src-tauri/src/: lib.rs  main.rs
tasks/: watchdog_trigger.py
test-1/: main.py  requirements-windows.txt
tests/: test_config_loader.py  test_eds_to_rjn_daemon_runner.py  test_helpers.py  test_status_api.py  test_sys_path_debug.py
tools/: generate_version.py
(+452 files in other folders)
