[project]
name = "pipeline"
version = "0.1.0"
description = "\"API access for reading from the EDS and writing, to https://rjn-clarity-api.com/v1/clarity\""
authors = [
    {name = "George Clayton Bennett",email = "george.bennett@memphistn.gov"}
]
license = {text = "BSD-3"}
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "suds (>=1.2.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "textual (>=3.1.0,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
