[package]
name = "multimodal-analysis-app"
version = "0.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.7.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
